[tool.poetry]
name = "image-batch-processing"
version = "0.1.0"
description = ""
authors = ["Jan Szumiec <jan.szumiec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-contrib-python = "^4.6.0"
opencv-python = "^4.6.0"
python-magic = "^0.4.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
